# StarlightCore

./: .gitmodules  CMakeLists.txt  README.md
include/: BasicVulkanRenderer.h  Compiler.h  Entity.h  EntityManager.h  GLSLShader.h  Image.h  InteractionSystem.h  LightManager.hpp  MapManager.hpp  MaterialManager.hpp  Object.h  ObjectManager.h  ObjectManager.hpp  PointLightRenderer.h  RenderEngine.h  ShaderManager.h  Star_Buffer.hpp  Star_Descriptors.hpp  Star_Device.hpp  Star_Image.hpp  Star_Pipeline.hpp  Star_RenderMaterial.hpp  Star_RenderMesh.hpp  Star_RenderObject.hpp  Star_RenderSystem.h  Star_Shader.h  Star_Shader.hpp  Star_Swapchain.hpp  Star_Texture.hpp  Star_Window.hpp  TextureManager.h  TextureManager.hpp  Vertex.hpp  VulkanObject.h  VulkanRenderer.h  VulkanVertex.hpp  Windowing.h
include/ObjectManager/: Object.h  ObjectManager.h
include/ShaderManager/: Compiler.h  GLSLShader.h  ShaderManager.h
include/Systems/: BasicVulkanRenderer.h  StarSystem_Render.hpp  StarSystem_RenderObj.hpp  StarSystem_RenderPointLight.hpp  StarSystem_RenderShadows.hpp
src/: BasicVulkanRenderer.cpp  Compiler.cpp  Entity.cpp  EntityManager.cpp  GLSLShader.cpp  Image.cpp  InteractionSystem.cpp  LightManager.cpp  MapManager.cpp  MaterialManager.cpp  Object.cpp  ObjectManager.cpp  PointLightRenderer.cpp  RenderEngine.cpp  ShaderManager.cpp  Star_Buffer.cpp  Star_Descriptors.cpp  Star_Device.cpp  Star_Image.cpp  Star_Pipeline.cpp  Star_RenderMaterial.cpp  Star_RenderMesh.cpp  Star_RenderObject.cpp  Star_RenderSystem.cpp  Star_Shader.cpp  Star_Swapchain.cpp  Star_Texture.cpp  Star_Window.cpp  TextureManager.cpp  VulkanObject.cpp  VulkanRenderer.cpp  VulkanVertex.cpp  Windowing.cpp
src/ObjectManager/: Object.cpp  ObjectManager.cpp
src/ShaderManager/: Compiler.cpp  GLSLShader.cpp  ShaderManager.cpp
src/Systems/: BasicVulkanRenderer.cpp  StarSystem_Render.cpp  StarSystem_RenderObj.cpp  StarSystem_RenderPointLight.cpp  StarSystem_RenderShadows.cpp
